# PlanetarySystemSimulator

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  imgui.ini
StarSystemSimVS/: StarSystemSimVS.sln
StarSystemSimVS/StarSystemSimVS/: StarSystemSimVS.vcxproj  StarSystemSimVS.vcxproj.filters
StarSystemSimVS/enc_temp_folder/a485dd65cf992794af5ec9f53357251/: camera.cpp
include/StarSystemSim/app/: app.h  event_manager.h
include/StarSystemSim/graphics/: camera.h  material.h  mesh.h  model.h  object.h  planet.h  render_mode.h  renderer.h  scene.h  shader.h  skybox.h  star.h
include/StarSystemSim/graphics/primitives/: cube.h  icosahedron.h  plane.h  point_light.h
include/StarSystemSim/physics/: body.h  engine.h
include/StarSystemSim/utilities/: error.h  lerp.h  load_text_file.h  string_manipulations.h  timer.h
include/glad/: glad.h
models/: earth.blend  earth.blend1
shaders/: TBN.shader  atmosphere.shader  basic.shader  blur.shader  celestial.shader  celestial2.shader  light_source.shader  lighting.shader  line.shader  mix.shader  postprocessing.shader  select.shader  skybox.shader  star.shader
source/: glad.c  main.cpp
source/app/: app.cpp  event_manager.cpp
source/graphics/: camera.cpp  mesh.cpp  model.cpp  object.cpp  planet.cpp  renderer.cpp  scene.cpp  shader.cpp  skybox.cpp  star.cpp
source/graphics/primitives/: cube.cpp  icosahedron.cpp  plane.cpp  point_light.cpp
source/physics/: body.cpp  engine.cpp
source/utilities/: error.cpp  lerp.cpp  load_text_file.cpp  string_manipulations.cpp  timer.cpp
